--- a/trunk/trace_viewer/system_stats/system_stats_snapshot.html
+++ b/trunk/trace_viewer/system_stats/system_stats_snapshot.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<!--
 // Copyright (c) 2013 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.require('cc.util');
@@ -51,3 +55,4 @@ tvcm.exportTo('system_stats', function() {
     SystemStatsSnapshot: SystemStatsSnapshot
   };
 });
+</script>
