--- a/trunk/trace_viewer/system_stats/system_stats_snapshot_view.html
+++ b/trunk/trace_viewer/system_stats/system_stats_snapshot_view.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
+<!--
 // Copyright (c) 2013 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/system_stats/system_stats_snapshot_view.css">
+
+<script>
 'use strict';
-
-tvcm.requireStylesheet('system_stats.system_stats_snapshot_view');
 
 tvcm.require('tracing.analysis.object_snapshot_view');
 tvcm.require('tracing.analysis.util');
@@ -79,3 +83,4 @@ tvcm.exportTo('system_stats', function() {
   };
 
 });
+</script>
