--- a/trunk/trace_viewer/system_stats/system_stats_instance_track_test.html
+++ b/trunk/trace_viewer/system_stats/system_stats_instance_track_test.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<!--
 // Copyright (c) 2013 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
+-->
 
+<link rel="import" href="/system_stats.html">
+
+<script>
 'use strict';
 
 tvcm.require('tracing.test_utils');
@@ -9,8 +15,6 @@ tvcm.require('tracing.selection');
 tvcm.require('tracing.trace_model.event');
 tvcm.require('tracing.timeline_viewport');
 tvcm.require('tracing.tracks.drawing_container');
-tvcm.require('system_stats.system_stats_instance_track');
-tvcm.require('system_stats.system_stats_snapshot');
 
 tvcm.unittest.testSuite('system_stats.system_stats_instance_track_test', function() { // @suppress longLineCheck
   var SystemStatsInstanceTrack = system_stats.SystemStatsInstanceTrack;
@@ -63,3 +67,4 @@ tvcm.unittest.testSuite('system_stats.system_stats_instance_track_test', functio
     track.viewport.setDisplayTransformImmediately(dt);
   });
 });
+</script>
