Convert tcmalloc directory to a HTML module.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/119880044

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -44,10 +44,10 @@ found in the LICENSE file.
   tvcm.require('tracing.timeline_view');
   tvcm.require('tracing.importer');
   tvcm.require('cc');
-  tvcm.require('tcmalloc');
-  tvcm.require('system_stats');
   </script>
 
+  <link rel="import" href="/tcmalloc.html">
+  <link rel="import" href="/system_stats.html">
   <link rel="import" href="/gpu.html">
 
   <script>
