--- a/trunk/trace_viewer/tcmalloc/heap.html
+++ b/trunk/trace_viewer/tcmalloc/heap.html
@@ -1,7 +1,11 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.require('tracing.trace_model.object_instance');
@@ -91,3 +95,4 @@ tvcm.exportTo('tcmalloc', function() {
     HeapSnapshot: HeapSnapshot
   };
 });
+</script>
