--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -43,9 +43,9 @@ found in the LICENSE file.
   <script>
   tvcm.require('tracing.timeline_view');
   tvcm.require('tracing.importer');
-  tvcm.require('cc');
   </script>
 
+  <link rel="import" href="/cc.html">
   <link rel="import" href="/tcmalloc.html">
   <link rel="import" href="/system_stats.html">
   <link rel="import" href="/gpu.html">
