--- a/trunk/trace_viewer/about_tracing/record_and_capture_controller.html
+++ b/trunk/trace_viewer/about_tracing/record_and_capture_controller.html
@@ -1,10 +1,14 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/about_tracing/record_selection_dialog.html">
+
+<script>
 'use strict';
-
-tvcm.require('about_tracing.record_selection_dialog');
 
 tvcm.exportTo('about_tracing', function() {
   function beginMonitoring(tracingControllerClient) {
@@ -259,3 +263,5 @@ tvcm.exportTo('about_tracing', function() {
     UserCancelledError: UserCancelledError
   };
 });
+</script>
+
