--- a/trunk/trace_viewer/about_tracing/xhr_based_tracing_controller_client.html
+++ b/trunk/trace_viewer/about_tracing/xhr_based_tracing_controller_client.html
@@ -1,10 +1,16 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/about_tracing/tracing_controller_client.html">
+
+<script>
 'use strict';
+
 tvcm.require('tvcm.promise');
-tvcm.require('about_tracing.tracing_controller_client');
 
 tvcm.exportTo('about_tracing', function() {
   function beginXhr(method, path, data) {
@@ -33,8 +39,7 @@ tvcm.exportTo('about_tracing', function() {
   /**
    * @constructor
    */
-  function XhrBasedTracingControllerClient() {
-  }
+  function XhrBasedTracingControllerClient() { }
 
   XhrBasedTracingControllerClient.prototype = {
     __proto__: about_tracing.TracingControllerClient.prototype,
@@ -85,3 +90,5 @@ tvcm.exportTo('about_tracing', function() {
     XhrBasedTracingControllerClient: XhrBasedTracingControllerClient
   };
 });
+</script>
+
