Convert analysis directory to HTML modules.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/119900043

--- a/trunk/trace_viewer/tracing/analysis/analysis_link.html
+++ b/trunk/trace_viewer/tracing/analysis/analysis_link.html
@@ -1,17 +1,21 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/analysis/analysis_link.css">
+
+<link rel="import" href="/tracing/analysis/util.html">
+
+<script>
 'use strict';
-
-tvcm.requireStylesheet('tracing.analysis.analysis_link');
 
 tvcm.require('tvcm.ui');
 tvcm.require('tracing.selection');
-tvcm.require('tracing.analysis.util');
 
 tvcm.exportTo('tracing.analysis', function() {
-
   var tsRound = tracing.analysis.tsRound;
 
   var RequestSelectionChangeEvent = tracing.RequestSelectionChangeEvent;
@@ -95,3 +99,5 @@ tvcm.exportTo('tracing.analysis', function() {
     ObjectInstanceLink: ObjectInstanceLink
   };
 });
+</script>
+
