--- a/trunk/trace_viewer/tracing/analysis/cpu_slice_view_test.html
+++ b/trunk/trace_viewer/tracing/analysis/cpu_slice_view_test.html
@@ -1,10 +1,15 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/analysis/cpu_slice_view.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.analysis.cpu_slice_view');
 tvcm.require('tracing.trace_model');
 tvcm.require('tracing.importer.linux_perf_importer');
 
@@ -65,3 +70,5 @@ tvcm.unittest.testSuite('tracing.analysis.cpu_slice_view_test', function() {
   });
 
 });
+</script>
+
