--- a/trunk/trace_viewer/tracing/analysis/analysis_view.html
+++ b/trunk/trace_viewer/tracing/analysis/analysis_view.html
@@ -1,25 +1,30 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/analysis/analysis_view.css">
+
+<link rel="import" href="/tracing/analysis/analysis_results.html">
+<link rel="import" href="/tracing/analysis/analyze_selection.html">
+<link rel="import" href="/tracing/analysis/default_object_view.html">
+<link rel="import" href="/tracing/analysis/object_instance_view.html">
+<link rel="import" href="/tracing/analysis/object_snapshot_view.html">
+<link rel="import" href="/tracing/analysis/slice_view.html">
+<link rel="import" href="/tracing/analysis/util.html">
+
+<script>
 'use strict';
 
 /**
  * @fileoverview Displays an analysis of the selection.
  */
-tvcm.requireStylesheet('tracing.analysis.analysis_view');
-
-tvcm.require('tracing.analysis.analysis_results');
-tvcm.require('tracing.analysis.analyze_selection');
-tvcm.require('tracing.analysis.default_object_view');
-tvcm.require('tracing.analysis.object_instance_view');
-tvcm.require('tracing.analysis.object_snapshot_view');
-tvcm.require('tracing.analysis.slice_view');
-tvcm.require('tracing.analysis.util');
 tvcm.require('tvcm.ui');
 tvcm.require('tvcm.guid');
-tvcm.exportTo('tracing.analysis', function() {
 
+tvcm.exportTo('tracing.analysis', function() {
   var AnalysisView = tvcm.ui.define('div');
 
   AnalysisView.prototype = {
@@ -163,3 +168,5 @@ tvcm.exportTo('tracing.analysis', function() {
     AnalysisView: AnalysisView
   };
 });
+</script>
+
