--- a/trunk/trace_viewer/tracing/analysis/analyze_counters_test.html
+++ b/trunk/trace_viewer/tracing/analysis/analyze_counters_test.html
@@ -1,13 +1,19 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
+
+<link rel="import" href="/tracing/analysis/analysis_view.html">
+<link rel="import" href="/tracing/analysis/stub_analysis_results.html">
+<link rel="import" href="/tracing/analysis/analyze_counters.html">
+
+<script>
 
 'use strict';
 
 tvcm.require('tracing.test_utils');
-tvcm.require('tracing.analysis.analysis_view');
-tvcm.require('tracing.analysis.stub_analysis_results');
-tvcm.require('tracing.analysis.analyze_counters');
 tvcm.require('tracing.selection');
 tvcm.require('tracing.trace_model.counter');
 tvcm.require('tracing.trace_model.counter_series');
@@ -175,3 +181,5 @@ tvcm.unittest.testSuite('tracing.analysis.analyze_counters_test', function() {
     assertEquals(2, results.tables.length);
   });
 });
+</script>
+
