--- a/trunk/trace_viewer/tracing/analysis/analyze_selection.html
+++ b/trunk/trace_viewer/tracing/analysis/analyze_selection.html
@@ -1,16 +1,21 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/analysis/analyze_counters.html">
+<link rel="import" href="/tracing/analysis/analyze_samples.html">
+<link rel="import" href="/tracing/analysis/analyze_slices.html">
+<link rel="import" href="/tracing/analysis/util.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.analysis.analyze_counters');
-tvcm.require('tracing.analysis.analyze_samples');
-tvcm.require('tracing.analysis.analyze_slices');
-tvcm.require('tracing.analysis.util');
 tvcm.require('tvcm.ui');
-tvcm.exportTo('tracing.analysis', function() {
 
+tvcm.exportTo('tracing.analysis', function() {
   /**
    * Analyzes the selection, outputting the analysis results into the provided
    * results object.
@@ -125,3 +130,5 @@ tvcm.exportTo('tracing.analysis', function() {
     analyzeEventsByType: analyzeEventsByType
   };
 });
+</script>
+
