--- a/trunk/trace_viewer/tracing/analysis/cpu_slice_view.html
+++ b/trunk/trace_viewer/tracing/analysis/cpu_slice_view.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <!--
 Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
+
+<link rel="import" href="/tracing/analysis/slice_view.html">
+<link rel="import" href="/tracing/analysis/util.html">
+<link rel="import" href="/tracing/analysis/analysis_link.html">
 
 <template id="cpu-slice-view-template">
   <table>
@@ -26,3 +31,74 @@ found in the LICENSE file.
     </tr>
   </table>
 </template>
+
+<script>
+'use strict';
+
+tvcm.require('tvcm.utils');
+
+tvcm.exportTo('tracing.analysis', function() {
+  var THIS_DOC = document.currentScript.ownerDocument;
+  var tsRound = tracing.analysis.tsRound;
+
+  /**
+   * @constructor
+   */
+  var CpuSliceView = tvcm.ui.define('cpu-slice-view',
+                                    tracing.analysis.SliceView);
+
+  CpuSliceView.prototype = {
+    __proto__: tracing.analysis.SliceView.prototype,
+
+    decorate: function() {
+      tracing.analysis.SliceView.prototype.decorate.call(this);
+      this.classList.add('cpu-slice-view');
+    },
+
+    updateContents: function() {
+      this.textContent = '';
+      this.appendChild(tvcm.instantiateTemplate('#cpu-slice-view-template',
+          THIS_DOC));
+
+      var cpuSlice = this.slice;
+      var thread = cpuSlice.threadThatWasRunning;
+
+      if (thread) {
+        this.querySelector('#process-name').textContent =
+            thread.parent.userFriendlyName;
+        this.querySelector('#thread-name').textContent =
+            thread.userFriendlyName;
+      } else {
+        this.querySelector('#process-name').parentElement.style.display =
+            'none';
+        this.querySelector('#thread-name').textContent = cpuSlice.title;
+      }
+      this.querySelector('#start').textContent = tsRound(cpuSlice.start) + 'ms';
+      this.querySelector('#duration').textContent =
+          tsRound(cpuSlice.duration) + 'ms';
+      var runningThreadEl = this.querySelector('#running-thread');
+      var timeSlice = cpuSlice.getAssociatedTimeslice();
+      if (!timeSlice) {
+        runningThreadEl.parentElement.style.display = 'none';
+      } else {
+        var threadLink = new tracing.analysis.AnalysisLink();
+        threadLink.textContent = 'Click to select';
+        threadLink.selectionGenerator = function() {
+          var selection = new tracing.Selection();
+          selection.push(timeSlice);
+          return selection;
+        }.bind(this);
+        runningThreadEl.appendChild(threadLink);
+      }
+    }
+  };
+
+  tracing.analysis.SliceView.register(
+      'tracing.analysis.CpuSlice', CpuSliceView);
+
+  return {
+    CpuSliceView: CpuSliceView
+  };
+});
+</script>
+
