--- a/trunk/trace_viewer/tracing/analysis/default_object_view.html
+++ b/trunk/trace_viewer/tracing/analysis/default_object_view.html
@@ -1,16 +1,20 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/analysis/default_object_view.css">
+
+<link rel="import" href="/tracing/analysis/analysis_link.html">
+<link rel="import" href="/tracing/analysis/object_instance_view.html">
+<link rel="import" href="/tracing/analysis/object_snapshot_view.html">
+<link rel="import" href="/tracing/analysis/util.html">
+<link rel="import" href="/tracing/analysis/generic_object_view.html">
+
+<script>
 'use strict';
-
-tvcm.requireStylesheet('tracing.analysis.default_object_view');
-
-tvcm.require('tracing.analysis.analysis_link');
-tvcm.require('tracing.analysis.object_instance_view');
-tvcm.require('tracing.analysis.object_snapshot_view');
-tvcm.require('tracing.analysis.util');
-tvcm.require('tracing.analysis.generic_object_view');
 
 tvcm.exportTo('tracing.analysis', function() {
   var tsRound = tracing.analysis.tsRound;
@@ -119,3 +123,5 @@ tvcm.exportTo('tracing.analysis', function() {
     DefaultObjectInstanceView: DefaultObjectInstanceView
   };
 });
+</script>
+
