--- a/trunk/trace_viewer/tracing/analysis/default_object_view_test.html
+++ b/trunk/trace_viewer/tracing/analysis/default_object_view_test.html
@@ -1,10 +1,15 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/analysis/default_object_view.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.analysis.default_object_view');
 tvcm.require('tracing.selection');
 tvcm.require('tracing.trace_model.object_instance');
 
@@ -32,3 +37,5 @@ tvcm.unittest.testSuite('tracing.analysis.default_object_view_test', function() 
     this.addHTMLOutput(view);
   });
 });
+</script>
+
