--- a/trunk/trace_viewer/tracing/analysis/slice_view.html
+++ b/trunk/trace_viewer/tracing/analysis/slice_view.html
@@ -1,7 +1,11 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.require('tvcm.ui');
@@ -71,3 +75,5 @@ tvcm.exportTo('tracing.analysis', function() {
     SliceView: SliceView
   };
 });
+</script>
+
