--- a/trunk/trace_viewer/tracing/analysis/stub_analysis_results.html
+++ b/trunk/trace_viewer/tracing/analysis/stub_analysis_results.html
@@ -1,7 +1,11 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.exportTo('tracing.analysis', function() {
@@ -103,3 +107,5 @@ tvcm.exportTo('tracing.analysis', function() {
     StubAnalysisResults: StubAnalysisResults
   };
 });
+</script>
+
