--- a/trunk/trace_viewer/tracing/analysis/stub_analysis_table.html
+++ b/trunk/trace_viewer/tracing/analysis/stub_analysis_table.html
@@ -1,11 +1,14 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.exportTo('tracing.analysis', function() {
-
   function StubAnalysisTable() {
     this.ownerDocument_ = document;
     this.nodes_ = [];
@@ -41,3 +44,5 @@ tvcm.exportTo('tracing.analysis', function() {
     StubAnalysisTable: StubAnalysisTable
   };
 });
+</script>
+
