--- a/trunk/trace_viewer/tracing/analysis/util.html
+++ b/trunk/trace_viewer/tracing/analysis/util.html
@@ -1,15 +1,17 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 /**
  * @fileoverview Helper functions for use in selection_analysis files.
  */
-
 tvcm.exportTo('tracing.analysis', function() {
-
   function tsRound(ts) {
     return Math.round(ts * 1000.0) / 1000.0;
   }
@@ -17,5 +19,6 @@ tvcm.exportTo('tracing.analysis', function() {
   return {
     tsRound: tsRound
   };
-
 });
+</script>
+
